feat: Make content injector optional for flexibility and performance optimization